--- a/views/home.ejs
+++ b/views/home.ejs
@@ -164,7 +164,7 @@ HO-01
 
         <div class="col-lg-6 col-md-12">
             <div class="card">
-                <div class="card-header card-header-tabs card-header-warning">
+                <div class="card-header card-header-tabs card-header-primary">
                     <div class="nav-tabs-navigation">
                         <div class="nav-tabs-wrapper">
                             <!-- <span class="nav-tabs-title">Tasks:</span> -->
@@ -183,7 +183,7 @@ HO-01
                     <div class="tab-content">
                         <div class="tab-pane active" id="latestReservations">
                             <table class="table table-hover">
-                                <thead class="text-warning">
+                                <thead class="text-primary">
                                     <th class="w-25">予約番号</th>
                                     <th>更新日時</th>
                                     <th>イベント</th>
