--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -57,7 +57,10 @@ PR-00
                         <tbody>
                             <tr id="templateRow">
                                 <td name="id__id">
-                                    <a target="_blank" href="/products/$id$">$id$</a>
+                                    <a target="_blank" href="/products/$id$">
+                                        $id$
+                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                    </a>
                                 </td>
                                 <td name="name.ja">
                                     $name.ja$
